# MAPS

./: .coverage  .env.example  .gitignore  .mcp.json  .pylintrc  ANALYSIS_EXPORT_SYSTEM_COMPLETE.md  APPLY_CONSOLIDATED_MIGRATION.md  APPLY_MIGRATIONS.md  CITATION.cff  CLAUDE.md  COMMERCIAL_LICENSE.md  COMPLETE_INTEGRATION.md  CONSOLIDATED_MIGRATION.sql  COPYRIGHT.md  DEPLOYMENT_CHECKLIST.md  EXCEL_EXPORT_COMPLETE.md  FOUNDATION_VALIDATION_STATUS.md  KEYWORD_VIEW_SETUP.md  LICENSE  LICENSE_CHANGE_EXPLANATION.md  MAIN_STATE_REVIEW.md  MIGRATION_QUICKSTART.md  MIGRATION_STATUS_AND_PLAN.md  Makefile  NEXT_STEPS_ANALYSIS.md  POST_WEB_INTERFACE_ROADMAP.md  PROJECT_ANALYSIS.md  PYLIDC_INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_MIGRATIONS.md  README.md  SESSION_CONTINUATION.md  SUPABASE_READY.md  SUPERVISOR_DOCUMENTATION_GUIDE.md  TEST_INSTRUCTIONS.md  UPDATED_INTEGRATION_SUMMARY.md  WEEK1_COMPLETION_SUMMARY.md  XMLPARSE.py  XML_COMP_TEST_RESULTS.md  cli.py  (+8 more)
.github/: NEW_SESSION_CONTEXT.md
data/: keywords_radiology_standard.csv
docs/: ANALYSIS_AND_EXPORT_GUIDE.md  API_QUICKSTART.md  API_REFERENCE.md  API_TEST_RESULTS.md  CASE_IDENTIFIER_QUICKSTART.md  CASE_IDENTIFIER_README.md  DATABASE_SETUP.md  DB_MIGRATION_SUMMARY.md  DEVELOPER_GUIDE.md  EXCEL_EXPORTER_EXTRACTION.md  EXTENSIBILITY_GUIDE.md  GUI_SIMPLIFICATION_SUMMARY.md  GUI_STATE_REPORT.md  IMPLEMENTATION_GUIDE_SCHEMA_AGNOSTIC.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  INDEX.md  INTEGRATION_TEST_REPORT.md  KEYWORD_CONSOLIDATED_VIEW.md  KEYWORD_NORMALIZATION_SUMMARY.md  MIGRATION_GUIDE.md  (+29 more)
(+315 files in other folders)
